<?xml version="1.0"?>
<package format="2">
  <name>convex_polyhedron_intersection</name>
  <version>0.0.0</version>
  <description>The convex_polyhedron_intersection package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cddeigen</depend>

</package>
