<?xml version="1.0"?>
<package format="2">
  <name>mesh_boolean_libigl</name>
  <version>0.0.0</version>
  <description>The libigl package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>qhulleigen</depend>
  <depend>mpfr</depend>
  <depend>libglfw3-dev</depend>
  <depend>libcgal-dev</depend>
</package>
