<?xml version="1.0"?>
<package format="2">
  <name>vclip</name>
  <version>1.0.0</version>
  <description>The vclip package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>The source code is freely distributed for educational, research and non-profit purposes. Permission to use the library in commercial products may be obtained from MERL - A Mitsubishi Electric Research Lab, 201 Broadway Cambridge, MA 02139</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libqhull</depend>

</package>
